fix: timers and buttons overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,10 +69,10 @@ a {
     flex-grow: 1;
 
     .timer {
-      flex-grow: 1;
-      width: 130px;
+      width: 33.33%;
 
       .timer__name {
+        padding: 0 20px;
         font-size: 1.5rem;
         margin-bottom: 3px;
       }
@@ -95,10 +95,10 @@ a {
 
   .day-interface__index-link {
     text-align: center;
-    margin: 30px auto;
+    margin: 10px auto;
     width: fit-content;
     display: block;
-    font-size: 2rem;
+    font-size: 1.5rem;
     background-color: lightsteelblue;
     border-radius: 40px;
     padding: 20px;
@@ -110,7 +110,7 @@ a {
     .day__date {
       margin-bottom: 10px;
       text-align: center;
-      font-size: 4rem;
+      font-size: 2rem;
     }
   }
 
